// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Observation - Interpretaion should render an Observation with interpretation ABNORMAL 1`] = `
<Fragment>
  <span
    className="value abnormal"
  >
    <IconAbnormal
      className="icon-interpretation"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    12345.678
  </span>
  <span
    className="unit"
  >
    mL
  </span>
</Fragment>
`;

exports[`Observation - Interpretaion should render an Observation with interpretation CRITICAL 1`] = `
<Fragment>
  <span
    className="value critical"
  >
    <IconCritical
      className="icon-interpretation"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    12345.678
  </span>
  <span
    className="unit"
  >
    mL
  </span>
</Fragment>
`;

exports[`Observation - Interpretaion should render an Observation with interpretation EXTREMEHIGH 1`] = `
<Fragment>
  <span
    className="value critical"
  >
    <IconCritical
      className="icon-interpretation"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    12345.678
  </span>
  <span
    className="unit"
  >
    mL
  </span>
</Fragment>
`;

exports[`Observation - Interpretaion should render an Observation with interpretation EXTREMELOW 1`] = `
<Fragment>
  <span
    className="value critical"
  >
    <IconCritical
      className="icon-interpretation"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    12345.678
  </span>
  <span
    className="unit"
  >
    mL
  </span>
</Fragment>
`;

exports[`Observation - Interpretaion should render an Observation with interpretation HIGH 1`] = `
<Fragment>
  <span
    className="value high"
  >
    <IconHigh
      className="icon-interpretation"
      data-name="Layer 1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    12345.678
  </span>
  <span
    className="unit"
  >
    mL
  </span>
</Fragment>
`;

exports[`Observation - Interpretaion should render an Observation with interpretation LOW 1`] = `
<Fragment>
  <span
    className="value low"
  >
    <IconLow
      className="icon-interpretation"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    12345.678
  </span>
  <span
    className="unit"
  >
    mL
  </span>
</Fragment>
`;

exports[`Observation - Interpretaion should render an Observation with interpretation NEUTRAL 1`] = `
<Fragment>
  <span
    className="value"
  >
    12345.678
  </span>
  <span
    className="unit"
  >
    mL
  </span>
</Fragment>
`;

exports[`Observation - Interpretaion should render an Observation with interpretation NORMAL 1`] = `
<Fragment>
  <span
    className="value"
  >
    12345.678
  </span>
  <span
    className="unit"
  >
    mL
  </span>
</Fragment>
`;

exports[`Observation - Interpretaion should render an Observation with interpretation PANICHIGH 1`] = `
<Fragment>
  <span
    className="value critical"
  >
    <IconCritical
      className="icon-interpretation"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    12345.678
  </span>
  <span
    className="unit"
  >
    mL
  </span>
</Fragment>
`;

exports[`Observation - Interpretaion should render an Observation with interpretation PANICLOW 1`] = `
<Fragment>
  <span
    className="value critical"
  >
    <IconCritical
      className="icon-interpretation"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    12345.678
  </span>
  <span
    className="unit"
  >
    mL
  </span>
</Fragment>
`;

exports[`Observation - Interpretaion should render an Observation with interpretation POSITIVE 1`] = `
<Fragment>
  <span
    className="value positive"
  >
    <IconCritical
      className="icon-interpretation"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    12345.678
  </span>
  <span
    className="unit"
  >
    mL
  </span>
</Fragment>
`;

exports[`Observation - Interpretaion should render an Observation with interpretation VABNORMAL 1`] = `
<Fragment>
  <span
    className="value critical"
  >
    <IconCritical
      className="icon-interpretation"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    12345.678
  </span>
  <span
    className="unit"
  >
    mL
  </span>
</Fragment>
`;

exports[`Observation should render a default Observation 1`] = `<InjectIntl(ResultError) />`;

exports[`Observation should render an Observation with eventId 1`] = `
<Fragment>
  <span
    className="value"
  >
    12345.678
  </span>
  <span
    className="unit"
  >
    mL
  </span>
</Fragment>
`;

exports[`Observation should render an Observation with hideUnit 1`] = `
<Fragment>
  <span
    className="value"
  >
    12345.678
  </span>
  <span
    className="unit unit-hidden"
  >
    mL
  </span>
</Fragment>
`;

exports[`Observation should render an Observation with result 1`] = `
<Fragment>
  <span
    className="value"
  >
    12345.678
  </span>
  <span
    className="unit"
  >
    mL
  </span>
</Fragment>
`;
